syntax = "proto3";

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);

  rpc ListUsers (ListUsersRequest) returns (stream UserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message ListUsersRequest {
  string filter = 1;
}
